Fix errors in runecarving recipe builder